--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <title>Rosie</title>
 </head>
 <body>
     <header>
+        <div class="row">
+            <a href="index.html" class="col-md-4 logo">
 
+            </div>
+            <div class="col-md-8">
+
+            </div>
+        </div>
     </header>
     <section>
 
